Creado mediante Colaboratory

--- a/Properati_Project.ipynb
+++ b/Properati_Project.ipynb
@@ -361,9 +361,9 @@
         "                   textcoords = 'offset points')\n",
         "plt.ylim(0, 200000)\n",
         "plt.xticks(rotation = 45, ha='right')\n",
-        "plt.title('Proporción de los distintos tipos de unidades', fontsize=15)\n",
-        "plt.ylabel('Cantidad', fontsize=15)\n",
-        "plt.xlabel('Tipo de propiedad', fontsize=15)"
+        "plt.title('proportion of property types', fontsize=15)\n",
+        "plt.ylabel('Quantity', fontsize=15)\n",
+        "plt.xlabel('Property Type', fontsize=15)"
       ],
       "execution_count": 6,
       "outputs": [
@@ -668,7 +668,7 @@
       "source": [
         "sns.boxplot(data = properati_f, x = 'surface_total')\n",
         "plt.xlim(0,300)\n",
-        "plt.title('Superfice Total')"
+        "plt.title('Surface Total')"
       ],
       "execution_count": 16,
       "outputs": [
@@ -723,7 +723,7 @@
         "plt.figure(figsize=(8,8))\n",
         "sns.boxplot(data = properati_f, x = 'surface_total', y='property_type')\n",
         "plt.xlim(0,1250)\n",
-        "plt.title('Superfice Total')"
+        "plt.title('Surface Total')"
       ],
       "execution_count": 11,
       "outputs": [
@@ -829,7 +829,7 @@
       "source": [
         "sns.boxplot(data = properati_f, x = 'price')\n",
         "plt.xlim(0,1000000)\n",
-        "plt.title('Precio')"
+        "plt.title('Price')"
       ],
       "execution_count": 20,
       "outputs": [
@@ -883,7 +883,7 @@
         "plt.figure(figsize=(8,8))\n",
         "sns.boxplot(data = properati_f, x = 'price', y='property_type')\n",
         "plt.xlim(0,1000000)\n",
-        "plt.title('Precio')"
+        "plt.title('Price')"
       ],
       "execution_count": 21,
       "outputs": [
@@ -2254,7 +2254,7 @@
         "plt.subplot(1,2,1)\n",
         "sns.distplot(y_train - y_train_pred, bins = 25, label = 'train')\n",
         "sns.distplot(y_test - y_test_pred, bins = 25, label = 'test')\n",
-        "plt.xlabel('errores')\n",
+        "plt.xlabel('Error')\n",
         "plt.legend()\n",
         "\n",
         "\n",
@@ -2332,9 +2332,9 @@
         "                   xytext = (0, 9), \n",
         "                   textcoords = 'offset points')\n",
         "plt.xticks(rotation = 45, ha='right')\n",
-        "plt.title('Importancia de los Atributos', fontsize=15)\n",
-        "plt.ylabel('Representatividad', fontsize=15)\n",
-        "plt.xlabel('Atributos', fontsize=15)\n",
+        "plt.title('Importance of Attributes', fontsize=15)\n",
+        "plt.ylabel('Representativeness', fontsize=15)\n",
+        "plt.xlabel('Attributes', fontsize=15)\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -2390,9 +2390,9 @@
         "                   xytext = (0, 9), \n",
         "                   textcoords = 'offset points')\n",
         "plt.xticks(rotation = 45, ha='right')\n",
-        "plt.title('Importancia de los Atributos', fontsize=15)\n",
-        "plt.ylabel('Representatividad', fontsize=15)\n",
-        "plt.xlabel('Atributos', fontsize=15)\n",
+        "plt.title('Importance of Attributes', fontsize=15)\n",
+        "plt.ylabel('Representativeness', fontsize=15)\n",
+        "plt.xlabel('Attributes', fontsize=15)\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -2449,9 +2449,9 @@
         "                   xytext = (0, 9), \n",
         "                   textcoords = 'offset points')\n",
         "plt.xticks(rotation = 45, ha='right')\n",
-        "plt.title('Importancia de los Atributos', fontsize=15)\n",
-        "plt.ylabel('Representatividad', fontsize=15)\n",
-        "plt.xlabel('Atributos', fontsize=15)\n",
+        "plt.title('Importance of Attributes', fontsize=15)\n",
+        "plt.ylabel('Representativeness', fontsize=15)\n",
+        "plt.xlabel('Attributes', fontsize=15)\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -2507,9 +2507,9 @@
         "                   xytext = (0, 9), \n",
         "                   textcoords = 'offset points')\n",
         "plt.xticks(rotation = 45, ha='right')\n",
-        "plt.title('Importancia de los Atributos', fontsize=15)\n",
-        "plt.ylabel('Representatividad', fontsize=15)\n",
-        "plt.xlabel('Atributos', fontsize=15)\n",
+        "plt.title('Importance of Attributes', fontsize=15)\n",
+        "plt.ylabel('Representativeness', fontsize=15)\n",
+        "plt.xlabel('Attributes', fontsize=15)\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -2637,7 +2637,7 @@
         "id": "ZDRAQsMXJ5yc"
       },
       "source": [
-        "print(\"Mejores parametros: \"+str(grid_search_XGB.best_params_))"
+        "print(\"Best Parameters: \"+str(grid_search_XGB.best_params_))"
       ],
       "execution_count": null,
       "outputs": []
@@ -2673,7 +2673,7 @@
         "plt.subplot(1,2,1)\n",
         "sns.distplot(y_train - y_train_pred_XGB, bins = 50, label = 'train')\n",
         "sns.distplot(y_test - y_test_pred_XGB, bins = 50, label = 'test')\n",
-        "plt.xlabel('errores')\n",
+        "plt.xlabel('Error')\n",
         "plt.legend()\n",
         "\n",
         "\n",
