Creado mediante Colaboratory

--- a/Properati_Project.ipynb
+++ b/Properati_Project.ipynb
@@ -361,7 +361,7 @@
         "                   textcoords = 'offset points')\n",
         "plt.ylim(0, 200000)\n",
         "plt.xticks(rotation = 45, ha='right')\n",
-        "plt.title('proportion of property types', fontsize=15)\n",
+        "plt.title('Proportion of property types', fontsize=15)\n",
         "plt.ylabel('Quantity', fontsize=15)\n",
         "plt.xlabel('Property Type', fontsize=15)"
       ],
