--- a/Properati_Project.ipynb
+++ b/Properati_Project.ipynb
@@ -44,8 +44,10 @@
         "id": "j_ha6Ws3BPNQ"
       },
       "source": [
-        "### **The data set and problem to solve:**  \n",
-        "At this oportunity we are going to work with the Properati's dataset. Properati it's a real estate company, the objective of this project is to use theirs current database to create a model that helps to predict the price of properties based on the property characteristics."
+        "### **The dataset and problem to solve:**  \n",
+        "At this oportunity we are going to work with the Properati's dataset. Properati it's a real estate company, the objective of this project is to use theirs current database to create a model that helps to predict the price of properties based on the property characteristics.  \n",
+        "\n",
+        "**Access to the dataset file [here](https://drive.google.com/file/d/1Cw_jc2s3N7lt4PHpTw934WXfqHbEbpPi/view?usp=sharing).**"
       ]
     },
     {
@@ -69,7 +71,7 @@
         "import seaborn as sns\n",
         "sns.set()"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,7 +87,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +112,7 @@
         "properati = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/DS_Proyecto_01_Datos_Properati.csv')\n",
         "properati.head()"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -318,7 +320,7 @@
         "# tipos = tipos.astype(int)\n",
         "print(tipos)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,7 +367,7 @@
         "plt.ylabel('Quantity', fontsize=15)\n",
         "plt.xlabel('Property Type', fontsize=15)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -408,7 +410,7 @@
         "\n",
         "properati_f_type = properati.loc[((properati.property_type == 'Departamento') | (properati.property_type == 'Casa') | (properati.property_type == 'PH'))]"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -425,7 +427,7 @@
         "#Statement: Number of bedrooms > Number of rooms\n",
         "properati_f = properati_f.loc[(properati_f.bedrooms <= properati_f.rooms)]"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -450,7 +452,7 @@
       "source": [
         "properati_f.describe()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -659,7 +661,7 @@
         "plt.xlim(0,300)\n",
         "plt.title('Surface Total')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -714,7 +716,7 @@
         "plt.xlim(0,1250)\n",
         "plt.title('Surface Total')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -781,7 +783,7 @@
         "                                ((properati_f.property_type=='PH') & ((20 <= properati_f.surface_total) & (properati_f.surface_total <= (Q3_PH+1.5*IQR_PH)))))]\n",
         "properati_f.shape"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -820,7 +822,7 @@
         "plt.xlim(0,1000000)\n",
         "plt.title('Price')"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -874,7 +876,7 @@
         "plt.xlim(0,1000000)\n",
         "plt.title('Price')"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -946,7 +948,7 @@
         "\n",
         "properati_f.shape"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -995,7 +997,7 @@
         "properati = pd.concat([properati, encode_1], axis=1)\n",
         "properati.head()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1208,7 +1210,7 @@
         "properati = pd.concat([properati, encode_2], axis=1)\n",
         "properati.head()"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1437,7 +1439,7 @@
       "source": [
         "properati.isna().sum()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1508,7 +1510,7 @@
         "properati ['lat'].fillna(value=properati['lat'].mean(), inplace=True)\n",
         "properati ['lon'].fillna(value=properati['lon'].mean(), inplace=True)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1548,7 +1550,7 @@
         "plt.yticks(rotation = 45)\n",
         "plt.show()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1578,7 +1580,7 @@
         "nuevo = properati[['surface_covered', 'bathrooms']]\n",
         "nuevo"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1699,7 +1701,7 @@
         "imputer = KNNImputer(n_neighbors=5, weights='uniform', metric='nan_euclidean')\n",
         "nuevo = imputer.fit_transform(nuevo)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1718,7 +1720,7 @@
         "nuevo.columns = ['surface_covered', 'bathrooms']\n",
         "nuevo"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1845,7 +1847,7 @@
         "properati = pd.concat([properati, nuevo.bathrooms], axis=1)\n",
         "properati.head()"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
